# rust-to-ts

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TypeScript  configure.cmd  configure.sh  future-plan.md  plan.md  run-all.cmd  run-bpmn-editor.cmd  runn-all.ps1
.github/: copilot-instructions.md
Examples/BpmnHelloWorld/: hello_world.bpmn
Examples/HelloWorld/: hello_world.rs  hello_world.ts  package.json  transpile.cmd  tsconfig.json
Examples/NeuralNetwork/: Cargo.toml
Examples/NeuralNetwork/src/: lib.rs  lib.ts  main.rs  main.ts
conversion/Examples/BpmnHelloWorld/: hello_world.rs  hello_world.ts
conversion/Examples/HelloWorld/: hello_world.rs  hello_world.ts
docs/: README.md
src/: lib.rs  main.rs  stuff.ps
src/Tester/: main.rs  main.ts
src/ast/: DEPRECATED.md  ast_syn.rs  mod.rs
src/ast_v2/: ast.rs  ast.ts  convert_rust_to_ts.rs  convert_rust_to_ts.ts  convert_ts_to_rust.rs  convert_ts_to_rust.ts  main.rs  main.ts  mod.rs  mod.ts  rust_ast.rs  rust_ast.ts  tagging.rs  tagging.ts  ts_ast.rs  ts_ast.ts
src/ast_v2/bpmn/: ast_bpmn.rs  ast_bpmn_to_rust.rs  mod.rs  (+1 more)
src/ast_v2_dry_run/: main.rs  main.ts
src/bpmn_validator/: main.rs
src/converter/: converter.rs  converter.ts  lib.ts  main.rs  main.ts  mod.rs
tools/bpmn-editor/: deno.json  server.ts
tools/bpmn-editor-tauri/: README.md  package.json  tsconfig.json  vite.config.ts
tools/bpmn-editor-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tools/bpmn-editor-tauri/src-tauri/capabilities/: default.json
tools/bpmn-editor-tauri/src-tauri/src/: main.rs
(+37 files in other folders)
