[package]
name = "rust-to-ts"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[[bin]]
name = "rust-to-ts"
path = "src/converter/main.rs"

[[bin]]
name = "tester"
path = "src/Tester/main.rs"