[package]
name = "rust-to-ts"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TamusJRoyce"]
homepage = "https://github.com/TamusJRoyce/typescript-rs"
repository = "https://github.com/TamusJRoyce/typescript-rs"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
quick-xml = "0.31"

[[bin]]
name = "rust-to-ts"
path = "src/converter/main.rs"

[[bin]]
name = "tester"
path = "src/Tester/main.rs"

[[bin]]
name = "ast-v2"
path = "src/ast_v2/main.rs"

[[bin]]
name = "bpmn-validator"
path = "src/bpmn_validator/main.rs"