[package]
name = "bpmn-editor-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

# Use the main repo crate as a library so the editor can call BPMN<->Rust conversion.
rust-to-ts = { path = "../../.." }

[features]
custom-protocol = ["tauri/custom-protocol"]
